# aiq-challenge

./: .env.dev  Dockerfile.dev  README.md  docker-compose.dev.yaml  main.py  pyproject.toml
app/: cache.py  config.py  database.py  lifespan.py  main.py  user.py
client/: routes.py  service.py
clients/app/: config.py  database.py
clients/data/models/: client.py
data/enums/: __init__.py  login_token_type.py
data/models/: __init__.py  client.py  favorite_product.py
data/schemas/: __init__.py  client.py  favorite_product.py  product.py
favorite_product/: routes.py  service.py
migrations/models/: 0_20250827004538_init.py
product/: routes.py  service.py
tests/: mock_product_service.py
tests/integration/: test_client_routes.py  test_favorite_product_routes.py
tests/unit/: test_product_routes.py
